<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="24dp">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="#DADADA">

        <TextView
            android:id="@+id/recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/gray1"
            android:text="@string/recipe_name"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/recipe_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/gray2"
            android:text="@string/_1_hour"
            app:layout_constraintTop_toBottomOf="@id/recipe_name"
            android:layout_marginTop="4dp"/>
        
        <ImageView
            android:id="@+id/recipe_weekly_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@+id/recipe_time"
            android:scaleType="centerCrop"
            android:contentDescription="@string/recipe_image"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>